--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -31,7 +31,7 @@
   "Enter": "Ingresar",
   "Download Image": "Descargar imagen",
   "View Full Image": "Ver imagen completa",
-  "File Sharing": "Compartición de archivos"
+  "File Share": "Compartición de archivos"
 
     }
   }
