--- a/src/locale/fr.json
+++ b/src/locale/fr.json
@@ -31,6 +31,6 @@
   "Enter": "Entrer",
   "Download Image": "Télécharger l'image",
   "View Full Image": "Voir l'image complète",
-  "File Sharing": "Partage de fichiers"
+  "File Share": "Partage de fichiers"
     }
   }
