--- a/src/locale/hi.json
+++ b/src/locale/hi.json
@@ -31,6 +31,6 @@
   "Enter": "लिखे",
   "Download Image": "छवि डाउनलोड करें",
   "View Full Image": "पूरी छवि देखें",
-  "File Sharing": "फ़ाइल साझा करना"
+  "File Share": "फ़ाइल साझा करना"
     }
   }
