--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -31,7 +31,7 @@
         "Enter":"Enter",
         "Download Image":"Download Image",
         "View Full Image":"View Full Image",
-        "File Sharing":"File Sharing"
+        "File Share":"File Share"
 
 
     }
