--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -31,7 +31,9 @@
   "Enter": "Ingresar",
   "Download Image": "Descargar imagen",
   "View Full Image": "Ver imagen completa",
-  "File Share": "Compartición de archivos"
+  "File Share": "Compartición de archivos",
+  "Upload": "Subir",
+  "Retrieve": "recuperar"
 
     }
   }
