--- a/src/locale/zh.json
+++ b/src/locale/zh.json
@@ -31,6 +31,8 @@
   "Enter": "进入",
   "Download Image": "下载图片",
   "View Full Image": "查看完整图片",
-  "File Share": "文件共享"
+  "File Share": "文件共享",
+  "Upload": "上传",
+  "Retrieve": "检索"
     }
   }
