--- a/src/locale/te.json
+++ b/src/locale/te.json
@@ -31,6 +31,8 @@
   "Enter": "నమోదు చేయండి",
   "Download Image": "చిత్రాన్ని డౌన్‌లోడ్ చేయండి",
   "View Full Image": "పూర్తి చిత్రాన్ని వీక్షించండి",
-  "File Share": "ఫైల్ షేరింగ్"
+  "File Share": "ఫైల్ షేరింగ్",
+  "Upload": "అప్‌లోడ్ చేయండి",
+  "Retrieve": "తిరిగి పొందండి"
     }
   }
